style: change project and group name

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ Temporary Items
 hs_err_pid*
 
 .idea
-datacenter-flume.iml
-flume-ng-sources/datacenter-flume-ng-sources.iml
+flume-plugin.iml
+flume-ng-sources/custom-flume-ng-sources.iml
 flume-ng-sources/target
 
