--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>flume-ng-sources</module>
+        <module>flume-ng-sinks</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -15,7 +16,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flume.agent.version>1.7.0</flume.agent.version>
+        <flume.agent.version>1.6.0</flume.agent.version>
+        <aliyun.openservices>1.2.6</aliyun.openservices>
     </properties>
 
     <dependencies>
